Aula 13 - input properties

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -3,7 +3,7 @@
     padding: 15px;
   }
 </style>
-
+<!-- 
 <section class="property-binding">
   <article>
     <h3>Interpolation/Interpolação</h3>
@@ -25,7 +25,6 @@
     <div>
       <select #classe (change)="(0)">
         <option value="alert-success">Sucesso</option>
-        <!-- <option value="alert-info">Info</option> -->
         <option value="alert-warning">Alerta</option>
         <option value="alert-danger">Erro</option>
       </select>
@@ -88,5 +87,14 @@
       >
       </span>
     </div>
+  </article>
+</section>
+ -->
+
+<section>
+  <article>
+    <h3>Input/Output Properties</h3>
+
+    <app-curso [nome]="nomeCurso"></app-curso>
   </article>
 </section>
