--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
 
 <!-- <app-cursos></app-cursos> -->
 
-<!-- <app-data-binding></app-data-binding> -->
+<app-data-binding></app-data-binding>
 
 <app-meu-form></app-meu-form>
