--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,9 +1,3 @@
-<style>
-  section {
-    padding: 15px;
-  }
-</style>
-<!-- 
 <section class="property-binding">
   <article>
     <h3>Interpolation/Interpolação</h3>
@@ -30,31 +24,18 @@
       </select>
     </div>
 
-    <br />
-
     <div class="alert {{ classe.value }}" role="alert">Texto colorido</div>
 
-    <div
-      class="alert"
-      role="alert"
-      [class.alert-success]="
-        classe.value == 'alert-success' ? 'alert-success' : ''
-      "
-    >
+    <div class="alert" role="alert" [class.alert-success]="
+        classe.value == 'alert-success' ? 'alert-success' : ''">
       A simple success alert—check it out!
     </div>
-    <div
-      class="alert"
-      role="alert"
-      [class.alert-warning]="classe.value == 'alert-warning'"
-    >
+
+    <div class="alert" role="alert" [class.alert-warning]="classe.value == 'alert-warning'">
       A simple warning alert—check it out!
     </div>
-    <div
-      class="alert alert-danger"
-      role="alert"
-      [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'"
-    >
+
+    <div class="alert alert-danger" role="alert" [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">
       A simple danger alert—check it out!
     </div>
   </article>
@@ -65,36 +46,33 @@
       <button (click)="buttonClick()" class="btn btn-primary">
         Click here!
       </button>
-
-      <br /><br />
-
-      <input
-        type="text"
-        #campoInput
-        (keyup)="onKeyUp($event)"
-        (blur)="salvarValor(campoInput.value)"
-        (keyup.enter)="salvarValor($any($event.target).value)"
-      />
+      <br>
+      <input type="text" #campoInput (keyup)="onKeyUp($event)" (blur)="salvarValor(campoInput.value)"
+        (keyup.enter)="salvarValor($any($event.target).value)" />
       <p>Valor atual: {{ valorAtual }}</p>
       <p>Valor salvo: {{ valorSalvo }}</p>
 
-      <span
-        (mouseover)="mouseOver()"
-        (mouseout)="mouseOut()"
-        (click)="mouseClick()"
-        [class.highlight]="isMouseOver"
-        [innerText]="textoMouse"
-      >
+      <span (mouseover)="mouseOver()" (mouseout)="mouseOut()" (click)="mouseClick()" [class.highlight]="isMouseOver"
+        [innerText]="textoMouse">
       </span>
     </div>
   </article>
 </section>
- -->
+
 
 <section>
   <article>
     <h3>Input/Output Properties</h3>
 
-    <app-curso [nome]="nomeCurso"></app-curso>
+    <div id="info" #divMsg class="alert alert-info" role="alert" [style.display]="showMsg ? 'block' : 'none'">
+      {{msg}}
+    </div>
+
+    <div id="erro" #divMsg class="alert alert-danger" role="alert" [style.display]="error ? 'block' : 'none'">
+      {{msg}}
+    </div>
+
+    <app-input-property [nome]="nomeCurso" (mudouCurso)="mostarMensagem($event)"></app-input-property>
+    <contador [valor]="valor" (mudouValor)="onMudouValor($event)"></contador>
   </article>
 </section>
