--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,11 @@
 
 <!-- <app-cursos></app-cursos> -->
 
-<!-- <app-data-binding></app-data-binding> -->
+<app-data-binding></app-data-binding>
 
 <!-- <app-meu-form></app-meu-form> -->
 
-<div class="alert alert-danger" *ngIf="destruir">{{msg}}</div>
+<!-- <div class="alert alert-danger" *ngIf="destruir">{{msg}}</div>
 <app-ciclo [valorInicial]="valor" *ngIf="!destruir" (mudouValor)="mudou($event)"></app-ciclo>
 <button (click)="mudarValor()">Mudar Valor</button>
-<button (click)="destruirCiclo()">Destruir</button>
+<button (click)="destruirCiclo()">Destruir</button> -->
