--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,4 @@
-<section class="property-binding">
+<!-- <section class="property-binding">
   <article>
     <h3>Interpolation/Interpolação</h3>
     <p>String renderizada com interpolação: {{ url }}</p>
@@ -57,7 +57,7 @@
       </span>
     </div>
   </article>
-</section>
+</section> -->
 
 
 <section>
