--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,11 @@
 
 <!-- <meu-primeiro-component></meu-primeiro-component> -->
 
-<!-- <app-meu-primeiro2></app-meu-primeiro2> -->
-
 <!-- <app-cursos></app-cursos> -->
 
-<app-data-binding></app-data-binding>
+<!-- <app-data-binding></app-data-binding> -->
 
-<!-- <app-meu-form></app-meu-form> -->
+<app-meu-form></app-meu-form>
 
 <!-- <div class="alert alert-danger" *ngIf="destruir">{{msg}}</div>
 <app-ciclo [valorInicial]="valor" *ngIf="!destruir" (mudouValor)="mudou($event)"></app-ciclo>
