Refatorando componente meu-form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <h1>{{ title }}</h1>
 
-<!-- <meu-primeiro-component></meu-primeiro-component> -->
+<meu-primeiro-component></meu-primeiro-component>
 
-<!-- <app-cursos></app-cursos> -->
+<!-- Exemplo de uso de modulos e componente privado  -->
+<!-- <app-cursos></app-cursos>  -->
 
+<!-- Exemlpo de data binding e input/output properties -->
 <!-- <app-data-binding></app-data-binding> -->
 
+<!-- Exemlpo Two-way data binding, input properties e componente privado -->
 <app-meu-form></app-meu-form>
 
+<!-- ciclo de vida do componente e input/output properties -->
 <!-- <div class="alert alert-danger" *ngIf="destruir">{{msg}}</div>
 <app-ciclo [valorInicial]="valor" *ngIf="!destruir" (mudouValor)="mudou($event)"></app-ciclo>
 <button (click)="mudarValor()">Mudar Valor</button>
