Aula 25 - Diretiva ngif

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,12 @@
 <!-- <app-data-binding></app-data-binding> -->
 
 <!-- Exemlpo Two-way data binding, input properties e componente privado -->
-<app-meu-form></app-meu-form>
+<!-- <app-meu-form></app-meu-form> -->
 
 <!-- ciclo de vida do componente e input/output properties -->
 <!-- <div class="alert alert-danger" *ngIf="destruir">{{msg}}</div>
 <app-ciclo [valorInicial]="valor" *ngIf="!destruir" (mudouValor)="mudou($event)"></app-ciclo>
 <button (click)="mudarValor()">Mudar Valor</button>
 <button (click)="destruirCiclo()">Destruir</button> -->
+
+<app-diretivas></app-diretivas>
