--- a/src/app/diretivas/diretivas.component.html
+++ b/src/app/diretivas/diretivas.component.html
@@ -1,5 +1,25 @@
-<p>diretivas works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="nav-wrapper">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a [class.active]="abaAtiva == 'ngif'" (click)="abaAtiva = 'ngif'" class="nav-link" href="#">ngIf</a>
+            </li>
+            <li class="nav-item">
+                <a [class.active]="abaAtiva == 'ngswitch'" (click)="abaAtiva = 'ngswitch'" class="nav-link"
+                    href="#">ngSwitch</a>
+            </li>
+            <li class="nav-item">
+                <a [class.active]="abaAtiva == 'ngfor'" (click)="abaAtiva = 'ngfor'" class="nav-link" href="#">ngFor</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<div *ngIf="response.length > 0">{{response}}</div>
+<div *ngIf="response.length > 0 && abaAtiva == 'ngif'">{{response}}</div>
 
-<app-diretiva-ngif [contador]=0 [cursos]="cursos" (response)="onResponse($event)"></app-diretiva-ngif>
+<div class="container" [ngSwitch]="abaAtiva">
+    <app-diretiva-ngif *ngSwitchCase="'ngif'" [contador]=0 [cursos]="cursos" (response)="onResponse($event)">
+    </app-diretiva-ngif>
+    <app-diretiva-ngswitch *ngSwitchCase="'ngswitch'"></app-diretiva-ngswitch>
+    <app-diretiva-ngfor *ngSwitchCase="'ngfor'"></app-diretiva-ngfor>
+</div>
