--- a/src/app/diretivas/diretiva-ngfor/diretiva-ngfor.component.html
+++ b/src/app/diretivas/diretiva-ngfor/diretiva-ngfor.component.html
@@ -1,4 +1,10 @@
+<h6>Diretiva ngFor</h6>
 <p *ngIf="msg.length > 0"> {{msg}} </p>
 <ul *ngFor="let d of disciplinas, let i = index">
     <li>{{i+1}} - {{d}} <button class="btn btn-primary" (click)="getMsg(i)">!</button> </li>
 </ul>
+
+<h6>Removendo o * e usando template</h6>
+<ng-template ngFor [ngForOf]="disciplinas" let-d let-i="index">
+    <li>{{i+1}} - {{d}} <button class="btn btn-primary" (click)="getMsg(i)">!</button> </li>
+</ng-template>
