Aula 31 - Operador Elvis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,7 @@
 <button (click)="mudarValor()">Mudar Valor</button>
 <button (click)="destruirCiclo()">Destruir</button> -->
 
-<app-diretivas></app-diretivas>
+<!-- <app-diretivas></app-diretivas> -->
+
+<!-- Evita nullpointer -->
+<app-operador-elvis></app-operador-elvis>
