Aula 34,35 - Diretivas: HostListener, HostBinding, Input, Output Binding

--- a/src/app/diretivas/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,1 +1,5 @@
 <p fundoAzul> diretivas-customizadas works! Texto com fundo azul </p>
+
+<p highlightMouse> mouse {{text}} </p>
+
+<p highlightMouse [defaultColor]="'grey'" [highlightColor]="'red'"> cores customizadas </p>
